@@ -8,3 +8,4 @@
 6|t||
 6s|t
 5r|Valid Geometry
+7|f|Self-intersection|POINT(70 400)
