@@ -19,6 +19,7 @@ PostGIS 2.5.4
   - #4536, Fix leak in lwcollection_from_wkb_state (Raúl Marín)
   - #4537, Fix leak in WKT collection parser (Raúl Marín)
   - #4547, Fix AddRasterConstraints handling of empty tables (Sandro Santilli)
+  - #4549, Fix schema qualification of internal types (Raúl Marín)
 
 
 PostGIS 2.5.3
